--- a/sql.cdc.listener/appsettings.json
+++ b/sql.cdc.listener/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "AppSettings": {
-    "CDCListenerDb": "Server=localhost;Database=CDC_Listener_Performance;User Id=sa;Password=Temporal1;"
+    "CDCListenerDb": "Server=localhost;Database=CDC_Listener_Performance;User Id=<user>;Password=<pass>;"
   }
 }
